@@ -37,12 +37,27 @@
   <build>
     <plugins>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.5</version>
-              <configuration>
-                  <skipTests>false</skipTests>
-                  <forkMode>once</forkMode>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M1</version>
+            <configuration>
+                <forkCount>0</forkCount> <!-- changed this to 0 -->
+                <reuseForks>false</reuseForks>
+                <!-- <threadCount>1</threadCount> --> <!-- shall be used with 'parallel' -->
+                <printSummary>true</printSummary>
+                <!-- <skipTests>false</skipTests> --> <!-- defaults to false -->
+
+                <!-- run test in headless mode -->
+                <systemPropertyVariables>
+                    <glass.platform>Monocle</glass.platform>
+                    <monocle.platform>Headless</monocle.platform>
+                    <prism.order>d3d</prism.order>
+                </systemPropertyVariables>
+
+                <argLine>
+                    --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                    --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                </argLine>
             </configuration>
         </plugin>
         <plugin>
